<resources>
    <string name="KuaiPanPage_btTransfer">传输</string>
    <string name="KuaiPanPage_btUpDownLoad">上传</string>
    <string name="msg_favor_audio">音乐</string>
    <string name="msg_favor_video">视频</string>
    <string name="msg_favor_doc">文档</string>
    <string name="msg_favor_apk">安装包</string>
    <string name="msg_favor_zip">压缩包</string>
    <string name="msg_favor_photo">图片</string>
    <string name="msg_favor_favor">收藏</string>
    <string name="msg_file_is_not_found">未找到相应文件</string>
    <string name="AddressDialog_Title_Latebrowse">最近浏览</string>
    <string name="AddressDialog_Title_Address">访问地址</string>
    <string name="FavoritesDialog_Title">收藏夹</string>
    <string name="btMenuFavorites_Title">收藏夹</string>
    <string name="btMenuListMode_Grid">图标模式</string>
    <string name="btMenuListMode_List">列表模式</string>
    <string name="btMenuShowOrHide_False">不显示隐藏文件</string>
    <string name="btMenuShowOrHide_True">显示隐藏文件</string>
    <string name="setting_theme_textbox">主题设置</string>
    <string name="setting_theme_button">主题设置</string>
    <string name="setting_theme_button_desc">设置不同主题以满足您的风格</string>
    <string name="radio_currentpath">在当前目录下搜索</string>
    <string name="radio_wholepath">在整个SD卡下搜索</string>
    <string name="msg_themedialog">主题设置</string>
        <string name="msg_backups">备份</string>
    <string name="msg_no_backups">不备份</string>
    	<string name="list_sort_Asc_Title">正序</string>
	<string name="list_sort_Desc_Title">倒序</string>
    <string name="can_not_open_file">未找到要打开的文件</string>
            <string name="btAllFileTitle">全部</string>
    <string name="btFolderTitle">文件夹</string>
        <string name="KuaiPan_use_Title">金山快盘使用说明</string>
    <string name="KuaiPan_use_Content">金山快盘使用说明</string>
    <string name="btShare">分享链接</string>
    <string name="btDownload">下载</string>
     <string name="setting_Feedback_Button">意见反馈</string>
    <string name="view_preferences">显示列表设置</string>
    <string name="view_button">样式</string>
    <string name="viewStyle_Title">文件排序</string>
    <string name="view_button_desc">图标,列表</string>
    <string name="sort_button">排序</string>
    <string name="sort_button_desc">名字,时间,文件大小</string>
        <string name="msg_upload_refresh">重试</string>
    <string name="msg_upload_dialog_title">正在上传</string>
    <string name="msg_upload_file_error">上传文件失败!</string>
    <string name="msg_upload_file_succeed">上传文件成功!</string>
    <string name="msg_upload_createfolder_error">创建文件夹失败!</string>
    <string name="msg_success_copy_file">已成功复制%d个!</string>
    <string name="msg_success_cut_file">已成功剪切%d个!</string>
    <string name="msg_folder_already_exists">该文件夹已经存在</string>
    <string name="msg_please_del_operate_file">请选择需要删除的文件</string>
    <string name="msg_del_select_item">确定删除已选的选项吗?</string>
    <string name="msg_please_operate">请选择操作!</string>
    <string name="msg_dialog_info_title">提示</string>
    <string name="msg_init_CommentScore">给我评分</string>
    <string name="msg_init_CommentScore_button2">稍候再说</string>
    <string name="msg_total_documents">共%d个文件</string>
    <string name="msg_copy_need_paste">请先复制需要粘贴的文件</string>
    <string name="msg_sorry_file_not_exist_permissions">该文件夹不存在或访问权限不够!</string>
    <string name="msg_sorry_not_move_file">不能将文件移动到该目录，这样产生死锁操作！</string>
    <string name="msg_sorry_file_permissions">对不起，文件访问权限不够!</string>
    <string name="msg_not_find_file">未找到该文件!</string>
    <string name="msg_loading_data">正在加载数据...</string>
    <string name="msg_backups_file">备份</string>
    <string name="msg_deleted_files">已删除</string>
    <string name="msg_please_enter_file">请输入要查询的文件名</string>
    <string name="msg_you_want_quit">您确定要退出吗？</string>
    <string name="dlg_press_again_to_exit_the_program">再按一次退出程序</string>
    <string name="msg_Please_select_cut_file">请选择需要剪切的文件</string>
    <string name="msg_Please_select_copy_file">请选择需要复制的文件</string>
    <string name="msg_Please_select_instal_file">请选择需要安装的文件</string>
    <string name="msg_Please_select_backup_program">请选择需要备份的程序</string>
    <string name="msg_Please_select_uninstall_program">请选择需要卸载的程序</string>
    <string name="msg_file_name_no_empty">文件名不能为空</string>
    <string name="msg_folder_name_no_empty">文件夹名不能为空</string>
    <string name="msg_file_already_exists">该文件已经存在</string>
    <string name="msg_failed_create">创建失败</string>
    <string name="msg_delselectfile">确定删除已选的文件吗?</string>
    <string name="installFileEvent_Title">安装</string>
    <string name="m_ClearCache">清空缓存</string>
    <string name="m_Logout">注销</string>
    <string name="KuaiPanLoginPageTitle">金山快盘</string>
    <string name="KuaiPan_Title">金山快盘</string>
    <string name="search">搜索</string>
    <string name="SearchResult_Title">搜索结果</string>
    <string name="SearchFileDialog_Title">搜索</string>
    <string name="SearchSubdirectory">搜索子文件夹</string>
    <string name="SearchCaseSensitive">区分大小写</string>
    <string name="SearchHide">搜索隐藏的文件</string>
    <string name="btRefreshTitle">刷新</string>
    <string name="btAllKillProc">全部终止</string>
    <string name="btUserAppTitle">用户</string>
    <string name="btSystemAppTitle">系统</string>
    <string name="btApkTitle">备份</string>
    <string name="not_delete_file_authority">没有删除权限</string>
    <string name="display_preferences">显示设置</string>
    <string name="display_ScreenRotate">屏幕旋转</string>
    <string name="display_Tools_Title">显示工具栏</string>
    <string name="display_Tab_Title">显示标签</string>
    <string name="display_ShowHideFile_Title">显示隐藏文件</string>
    <string name="display_Tab_Task_Title">显示任务管理器标签</string>
    <string name="directory_preferences">目录设置</string>
    <string name="directory_DefaultPath">设置默认访问目录</string>
    <string name="directory_CurrentPath">将当前目录设置为默认目录</string>
    <string name="directory_LastPath">记录最后访问路径</string>
    <string name="replacement_preferences">恢复设置</string>
    <string name="about_preferences">关于我们</string>
    <string name="about_CommentScore">评分,支持一下</string>
    <string name="commentContent">没有公司背景,没有团队帮助,该软件是我自己用业余时间独自完成的。非常感谢大家的支持和不断的意见反馈,让软件更加完善\n\n如果您觉得软件还可以请您能给评个分.让更多的朋友发现和使用这款软件，谢谢！</string>
    <string name="set_aboutTitle">关于</string>
    <string name="msg_can_not_operated">对不起，该文件无法操作!</string>
    <string name="msg_Scan_Finish">扫描完成！</string>
    <string name="msg_Send">发送</string>
    <string name="aboutTitle">关于</string>
    <string name="btSend">发送</string>
    <string name="btCancel">取消</string>
    <string name="audio_playing_title">正在播放</string>
    <string name="lable_External">SD卡:</string>
    <string name="lable_Available">可用:</string>
    <string name="lable_Internal">手机:</string>
    <string name="lable_music">音乐:</string>
    <string name="lable_document">文档:</string>
    <string name="lable_video">视频:</string>
    <string name="lable_webpage">网页:</string>
    <string name="lable_zip">压缩包:</string>
    <string name="lable_apk">应用:</string>
    <string name="lable_pic">图片:</string>
    <string name="error_lable">错误:</string>
    <string name="palseFileEvent_Title">正在粘贴</string>
    <string name="deleteFileEvent_Title">正在删除</string>
    <string name="m_New">新建</string>
    <string name="m_About">关于</string>
    <string name="m_List">列表模式</string>
    <string name="m_Grid">网格模式</string>
    <string name="m_Feedback">反馈</string>
    <string name="m_Search">搜索</string>
    <string name="m_Setting">设置</string>
    <string name="m_Exit">退出</string>
    <string name="DetailsDialog_Title">属性</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="done">确定</string>
    <string name="file">文件</string>
    <string name="foler">文件夹</string>
    <string name="fileName">名称:</string>
    <string name="fileType">类型:</string>
    <string name="fileModified">日期:</string>
    <string name="fileSize">大小:</string>
    <string name="fileCount">文件数:</string>
    <string name="fileTotalSpace">总空间:</string>
    <string name="fileFreeSpace">可用空间:</string>
    <string name="filePath">路径:</string>
    <string name="fileReadable">读权限:</string>
    <string name="fileWriteable">写权限:</string>
    <string name="fileHidden">隐藏:</string>
    <string name="btDownLoad">下载</string>
    <string name="btSelectVisible">选择</string>
    <string name="btSelect">选择</string>
    <string name="btSelectAll">全选</string>
    <string name="btNew">新建</string>
    <string name="btCopy">复制</string>
    <string name="btCut">剪切</string>
    <string name="btPaste">粘贴</string>
    <string name="btDelete">删除</string>
        <string name="btUpLoad">上传</string>
    <string name="btBack">返回</string>
    <string name="btRefresh">刷新</string>
    <string name="btInstall">安装</string>
    <string name="btScan">扫描</string>
    <string name="btBackUp">备份</string>
    <string name="btUnInstall">卸载</string>
    <string name="btExit">退出</string>
    <string name="app_name">文件管理器</string>
    <string name="create_file">文本文件</string>
    <string name="create_folder">文件夹</string>
    <string name="back_previous">返回上一层</string>
    <string name="Main_LocalPage_Title">本地</string>
    <string name="Main_NetWorkPage_Title">网络</string>
    <string name="Main_FavoritePage_Title">收藏</string>
    <string name="Main_AppsPage_Title">程序</string>
    <string name="Main_TaskPage_Title">任务</string>
    <string name="aboutContent">\n本软件是由个人开发者独立完成的，几乎占用了大部分的周末和晚上的休息时间，很用心的想给大家提供一些方便，没有盈利的目的。希望能够为大家使用手机提供很大方便。此外，我们一定会再接再厉，将软件功能，性能以及界面全方面完善.目前还有很多地方需要改善,请大家多多包含,我们会一一完善,同时欢迎大家提出各种意见  \nQQ群号:138904799</string>
    <string name="edit_search_hint">请输入搜索关键字</string>
    <string name="CreateKPFileDialog_title">新建文件夹</string>
    <string name="CreateFileDialog_title">新建</string>
    <string name="hint_createfile">请输入要文件名称</string>
    <string name="hint_createfolder">请输入要文件夹名称</string>
    <string name="lable_title">标题</string>
    <string name="lable_detail">内容</string>
    <string name="button_encode">编码</string>
    <string name="button_edit">编辑</string>
    <string name="button_refer">保存</string>
    <string name="button_back">返回</string>
    <string name="NetWorkPage_Title">FTP共享服务器</string>
    <string name="AppsPage_Title">已经安装的软件</string>
    <string name="TaskPage_Title">正在运行的软件</string>
    <string name="FavoritePage_Title">分类浏览</string>
    <string name="RenameDialog_Title">重命名</string>
    <string name="ZipDialog_Title">压缩查看器</string>
    <string name="ScanTitle">扫描提示</string>
    <string name="ScanContent">您的列表还没有扫描,立即进行一次全盘扫描</string>
    <string name="ScanReContent">您确定要重新,进行全盘扫描</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="labeUserName">用户名:</string>
    <string name="labePassWord">密码:</string>
    <string name="labeShareFolder">共享目录:</string>
    <string name="add_user">添加用户</string>
    <string name="manage_users">Manage Users</string>
    <string name="swiftp_name">虚拟数据线</string>
    <string name="server_options">Server Options</string>
    <string name="start_server"><b>启动服务</b></string>
    <string name="stop_server"><b>停止服务</b></string>
    <string name="server_status">服务状态:</string>
    <string name="my_url_is">共享地址:</string>
    <string name="cannot_start_until_wifi">没有WIFI</string>
    <string name="config_wifi"><b>配置WIFI网络</b></string>
    <string name="wifi_waiting">Wifi waiting</string>
    <string name="last_error">错误信息:</string>
    <string name="cant_get_url">未获地址</string>
    <string name="running">运行中</string>
    <string name="stopped">停止</string>
    <string name="unknown">未知</string>
    <string name="session_monitor">Session monitor enabled:</string>
    <string name="server_log">Server log enabled:</string>
    <string name="submit_bug_reports">"Submit bug reports: "</string>
    <string name="instructions_label">Instructions</string>
    <string name="config_ftp">参数配置</string>
    <string name="save_settings">保存</string>
    <string name="config_username">用户名:</string>
    <string name="config_password">密码:</string>
    <string name="config_portnum">端口:</string>
</resources>