<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/muCreate"
        android:icon="@drawable/common_icon_menu_add"
        android:title="@string/m_New"/>
    <item
        android:id="@+id/muClearCache"
        android:icon="@drawable/common_icon_clean"
        android:title="@string/m_ClearCache"/>
    <item
        android:id="@+id/muSetting"
        android:icon="@drawable/common_ic_menu_setting"
        android:title="@string/m_Setting"/>
    <item
        android:id="@+id/muLogout"
        android:icon="@drawable/common_icon_setas_on"
        android:title="@string/m_Logout"/>
    <item
        android:id="@+id/muExit"
        android:icon="@drawable/common_ic_menu_exit"
        android:title="@string/m_Exit"/>
</menu>