<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/lyTools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bg" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/KuaiPanLoginPageTitle"
            android:textColor="#ffffff"
            android:textSize="22dip" />

        <Button
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/tab_left_bg"
            android:textSize="16dip" />
    </RelativeLayout>

    <WebView
        android:id="@+id/wvWebSide"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0" >
    </WebView>

    <RelativeLayout
        android:id="@+id/rlNoNetwork"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:background="#fff5f5f5"
        android:orientation="vertical"
        android:paddingBottom="1dip"
        android:paddingTop="20dip"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="100dip"
            android:src="@drawable/list_kuaipan_logo" />

        <LinearLayout
            android:id="@+id/lyLoading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView1"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dip"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+android:id/progress_small_title"
                style="?android:attr/progressBarStyleSmallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/loading_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1.0dip"
                android:gravity="center_vertical|center_horizontal"
                android:paddingLeft="6.0dip"
                android:paddingTop="2.0dip"
                android:text="@string/msg_loading_data"
                android:textColor="@color/TLTitleText"
                android:textSize="16dip" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyError"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView1"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dip"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tvError_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="1.0dip"
                android:gravity="center_horizontal"
                android:paddingLeft="6.0dip"
                android:paddingTop="20dip"
                android:text="下载失败,请稍候重试"
                android:textColor="@color/TLTitleText"
                android:textSize="16dip" >
            </TextView>

            <Button
                android:id="@+id/btNoNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1dip"
                android:text="@string/msg_upload_refresh"
                android:textSize="14dip"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>